@startuml CommandResultClassDiagram
skinparam classAttributeIconSize 0
skinparam style strictuml


interface Command <<interface>> {
    +execute(db : StudentDatabase, storage : Storage) : CommandResult
    +undo(db : StudentDatabase, storage : Storage) : CommandResult
    +isUndoable() : boolean
}

class CommandResult {
    -message : String
    -exit : boolean
    -requiresConfirmation : boolean
    -pendingCommand : Command
    +CommandResult(message : String)
    +CommandResult(message : String, exit : boolean)
    +CommandResult(message : String, pendingCommand : Command)
    +getMessage() : String
    +shouldExit() : boolean
    +requiresConfirmation() : boolean
    +getPendingCommand() : Command
}

class App

Command ..> CommandResult : creates
CommandResult --> "0..1" Command : pendingCommand
App ..> CommandResult : reads

@enduml
